# PLANEKS_Django_test

./: README.md  pyproject.toml  requirements.txt
src/apps/exceptions/: apps.py  views.py
src/apps/fake_schemas_generation/: admin.py  apps.py  urls.py  views.py
src/apps/fake_schemas_generation/forms/: __init__.py  column.py  schema.py
src/apps/fake_schemas_generation/libs/: constants.py
src/apps/fake_schemas_generation/migrations/: 0001_initial.py  0002_schema_quotes_schema_separator.py  0003_record_end_integer_record_sentences_and_more.py  0004_remove_record_data.py  0005_alter_record_end_integer_alter_record_sentences_and_more.py  0006_alter_record_unique_together.py  0007_alter_schema_options.py  0008_alter_schema_options.py  0009_alter_record_unique_together.py  0010_alter_record_unique_together.py  0011_column_delete_record.py  0012_dataset.py  0013_alter_dataset_csv_file.py  0014_alter_dataset_options_dataset_generated_at_and_more.py  0015_dataset_schema.py  0016_alter_dataset_options_alter_dataset_rows_quantity.py  0017_alter_dataset_options.py  0018_alter_dataset_options.py  0019_alter_dataset_generated_at.py  0020_alter_dataset_options.py
src/apps/fake_schemas_generation/models/: __init__.py  column.py  data_set.py  record.py  row.py  schema.py
src/apps/fake_schemas_generation/services/: __init__.py  columns.py  data_set.py  schema.py
src/apps/user_auth/: context_processors.py  factories.py  forms.py  urls.py  views.py
src/config/: settings.py  urls.py
src/static/: staticfiles.json
src/static/js/: datasets.js  sign_in.js
src/templates/: base.html
src/utils/: data_set.py  data_types.py  pagination.py
(+23 files in other folders)
