[tool.poetry]
name = "planeks-django-test"
version = "0.1.0"
description = "schemas for generating fake data"
authors = ["Vaipik <n.khylko@gmail.com>"]
readme = "README.md"
packages = [{include = "planeks_django_test"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
faker = "^17.3.0"
psycopg2 = "^2.9.5"
django-autoslug = "^1.9.8"
pytils = "^0.4.1"
django-storages = "^1.13.2"
dropbox = "^11.36.0"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
factory-boy = "^3.2.1"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
